src/components/Layouts/style.scss
@import '../../styles/partials/normalize';
@import '../../styles/partials/variables';
@import '../../styles/partials/typography';
@import '../../styles/partials/buttons';

/*********************
MEDIA QUERIES
This is where you'll find all of our media query-based stylesheets.
They're loaded conditionally so you only need to add styles for 
the devices and viewports that use them. 
*********************/

/*********************
BASE STYLESHEET
This stylesheet is loaded by all devices + viewports so global styles
that apply site-wide are here. If you set some good defaults, you 
won't need to add too much elsewhere. Still, remember to keep this
stylesheet as light as possible and use progressive enhancement for
larger devices.
*********************/

// styles in base.scss
@import "../../styles/breakpoints/base";

/*********************
LARGER MOBILE DEVICES
This is for devices like the Galaxy Note or something that's
larger than an iPhone but smaller than a tablet. Let's call them
tweeners.
*********************/
@media only screen and (min-width: 481px) {
    // styles in 481up.scss
    @import "../../styles/breakpoints/481up";
}

// end of media query

/*********************
BELOW TABLET
This is for everything that's below an iPad including mobile
phones. This way we can keep mobile styles separate and not
compete with the base styles.
*********************/
@media only screen and (max-width: 767px) {
    // styles in 767down.scss
    @import "../../styles/breakpoints/767down";
}

// end of media query

/*********************
TABLET & SMALLER LAPTOPS
This is the average viewing window. So Desktops, Laptops, and
in general anyone not viewing on a mobile device. Here's where
you can add resource intensive styles.
*********************/
@media only screen and (min-width: 768px) {
    // styles in 768up.scss
    @import "../../styles/breakpoints/768up";
}

// end of media query

@media only screen and (max-width: 899px) {
    // styles in 899down.scss
    @import "../../styles/breakpoints/899down";
}

// end of media query

@media only screen and (max-width: 1029px) {
    // styles in 1029down.scss
    @import "../../styles/breakpoints/1029down";
}

// end of media query

/*********************
TWEENER
This targets some trickier 'tweener' devices like large
tablets. You probably won't need to add too much to this stylesheet.
If you're not using it, delete it.
*********************/

@media only screen and (min-width: 900px) {
    // styles in 900up.scss
    @import "../../styles/breakpoints/900up";
}

/*********************
DESKTOP
This is the average viewing window. So Desktops, Laptops, and
in general anyone not viewing on a mobile device. Here's where
you can add resource intensive styles.
*********************/
@media only screen and (min-width: 1030px) {
    // styles in 1030up.scss
    @import "../../styles/breakpoints/1030up";
}

// end of media query

/*********************
LARGE VIEWING SIZE
This is for the larger monitors and possibly full screen viewers.
*********************/
@media only screen and (min-width: 1240px) {
    // styles in 1240up.scss
    @import "../../styles/breakpoints/1240up";
}

// end of media query

/*********************
HIMALAYA XL 9000 SIZE
This is for super ginormous monitors like your one friend has.
*********************/
@media only screen and (min-width: 1600px) {
    // styles in 1600up.scss
    @import "../../styles/breakpoints/1600up";
}

// end of media query

/*********************
PRINT STYLESHEET
Feel free to customize this. Remember to add things that won't make
sense to print at the bottom. Things like nav, ads, and forms should
be set to display none.
*********************/
@media print {
    // styles in print.scss
    @import "../../styles/partials/print";
}

// hack for Safari word-wrap
@media not all and (min-resolution:.001dpcm) { 
    @media screen {
        body, p, h1, h2, h3, h4, h5 { 
            white-space: nowrap;
        }
    }
}

